# research-paper-agent-team

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: schedule.yaml  sources.yaml  tag_schema.yaml
configs/profiles/dtp-pmsm/: research_profile.yaml
docs/: architecture.md  configuration.md  development_workflow.md  runtime_agents.md
docs/adr/: ADR-001-orchestrator-choice.md  ADR-002-agent-boundary.md  ADR-003-zotero-import-state-machine.md
docs/superpowers/plans/: 2026-05-10-mvp1-implementation.md
docs/superpowers/specs/: 2026-05-10-research-paper-agent-team-design.md
src/: __init__.py  config.py  logging_config.py  main.py  orchestrator.py
src/dedupe/: deduplicator.py  hard.py  soft.py
src/fetchers/: __init__.py  _http.py  arxiv.py  base.py  crossref.py
src/filter/: rule_filter.py
src/models/: dedup.py  paper.py  run.py
src/normalize/: normalizer.py  title.py
src/reports/: digest_writer.py
src/reports/templates/: candidates.md.j2  run_summary.md.j2
src/storage/: db.py  repositories.py
src/storage/migrations/: 001_initial.sql  002_add_run_id.sql
src/utils/: hashing.py  runid.py  time.py
tests/: conftest.py
tests/fixtures/arxiv/: empty_response.xml  search_motor_control.xml
tests/fixtures/crossref/: empty_response.json  search_dtp_pmsm.json
tests/integration/: test_cli.py  test_orchestrator.py
tests/unit/: test_config.py  test_db.py  test_dedupe_hard.py  test_dedupe_soft.py  test_deduplicator.py  test_fetcher_arxiv.py  test_fetcher_crossref.py  test_hashing.py  test_logging.py  test_models.py  test_normalize_title.py  test_normalizer.py  test_report_writer.py  test_repositories.py  test_rule_filter.py  test_runid.py  test_time.py
