[project]
name = "research-paper-agent-team"
version = "0.1.0"
description = "Research paper discovery and management agent team for domain-specific literature review"
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
authors = [
    {name = "land3acpe"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["research", "paper", "arxiv", "literature-review", "agent"]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3",
    "httpx>=0.27,<1",
    "feedparser>=6.0",
    "rapidfuzz>=3.9",
    "jinja2>=3.1",
    "typer>=0.12",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "python-slugify>=8",
    "shortuuid>=1.0",
]

[project.scripts]
rpat = "src.main:app"

[project.urls]
Homepage = "https://github.com/land3acpe/research-paper-agent-team"
Repository = "https://github.com/land3acpe/research-paper-agent-team"
Issues = "https://github.com/land3acpe/research-paper-agent-team/issues"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_api: tests that hit real external APIs (excluded by default)",
    "integration: end-to-end orchestrator tests",
]
addopts = "-m 'not live_api'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
